# matrix

./: Cargo.toml  README.md
Old_src/ex00/: mat_operation.rs  vec_operation.rs
Old_src/ex01/: linear_combination.rs  main01.rs
Old_src/ex02/: linear_interp.rs  main02.rs
Old_src/ex03/: dot_product.rs  mod.rs
Old_src/ex04/: main04.rs
Old_src/ex05/: angle_cos_vector.rs
Old_src/ex06/: main06.rs
Old_src/ex07/: mul_vec.rs
Old_src/ex08/: main08.rs  mod.rs  trace.rs
Old_src/ex09/: transpose.rs
Old_src/ex11/: main11.rs  mod.rs
Old_src/ex12/: main12.rs  mod.rs
Old_src/ex13/: rank.rs
Old_src/ex14/: mod.rs  projection_matrix.rs
old_src/: main.rs
old_src/base_struct/: main_basic.rs  matrix.rs  vector.rs
old_src/ex00/: mod.rs
old_src/ex01/: mod.rs
old_src/ex04/: norm.rs
old_src/ex05/: mod.rs
old_src/ex06/: cross_product.rs
old_src/ex07/: mod.rs
old_src/ex09/: mod.rs
old_src/ex10/: row_echelon.rs
old_src/ex11/: determinant.rs
src/: bin.rs  lib.rs  main.rs  matrix.rs  vector.rs
src/base/: mat_operation.rs  matrix.rs  mod.rs  scalar.rs  vec_operation.rs  vector.rs
src/base_class/: complex.rs  matrix.rs  vec_operation.rs
src/base_struct/: main_basic.rs  matrix.rs  mod.rs  scalar.rs  vector.rs
src/ex00/: main00.rs  mat_operation.rs  mod.rs  vec_operation.rs
src/ex01/: linear_combination.rs  main01.rs  mod.rs
src/ex02/: linear_interp.rs  main02.rs  mod.rs
src/ex03/: dot_product.rs  main03.rs  mod.rs
src/ex04/: mod.rs  norm.rs
src/ex05/: angle_cos_vector.rs  main05.rs  mod.rs
src/ex06/: cross_product.rs  mod.rs
(+43 files in other folders)
